tests/samples/negative/visibility/private_function_import.ax
module private_function_import;

import samplelib.visibility;

fn main() -> i32 {
    return add_secret(1);
}
